--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
-<app-post></app-post>
+<div class="container">
+  <h1 class="page-header text-primary custom-page">Olga's blog</h1>
+  <app-post-form></app-post-form>
+
+  <hr />
+
+  <app-post></app-post>
+
+  <app-post></app-post>
+</div>
