--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,1 +1,6 @@
-<p>post works!</p>
+<div class="container text-blog">
+  <h2 class="text-secondary">Post Title</h2>
+  <p>
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo, eligendi.
+  </p>
+</div>
