--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,6 +1,6 @@
 <div class="container text-blog">
-  <h2 class="text-secondary">Post Title</h2>
+  <h2 class="text-secondary">{{ post.title }}</h2>
   <p>
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo, eligendi.
+    {{ post.text }}
   </p>
 </div>
