--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,12 @@
 
   <hr />
 
-  <app-post *ngFor="let p of posts" [post]="p"> </app-post>
+  <app-post *ngFor="let p of posts" [post]="p">
+    <small *ngIf="p.text.length > 50; else short">Post is long</small>
+    <ng-template #short>
+      <small>
+        Post is short
+      </small>
+    </ng-template>
+  </app-post>
 </div>
